--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <meta property="og:url" content="https://x.com/2025progress/">
     <meta property="og:title" content="2025 Progress Tracker | Real-time Year Progress">
     <meta property="og:description" content="Track 2025 as it happens with our real-time year progress tracker. Watch the precise progression of 2025 with exact percentages, days passed, and time remaining.">
-    <meta property="og:image" content="https://2025progress.com/og-image.png">
+    <meta property="og:image" content="https://github.com/jk08y/2025progress/blob/main/public/og-image.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://x.com/2025progress/">
     <meta property="twitter:title" content="2025 Progress Tracker | Real-time Year Progress">
     <meta property="twitter:description" content="Track 2025 as it happens with our real-time year progress tracker. Watch the precise progression of 2025 with exact percentages, days passed, and time remaining.">
-    <meta property="twitter:image" content="https://2025progress.com/og-image.png">
+    <meta property="twitter:image" content="https://github.com/jk08y/2025progress/blob/main/public/og-image.png">
     
     <!-- iOS meta tags -->
     <meta name="apple-mobile-web-app-capable" content="yes">
